kyy-k8s-dev/dev-server/go-api/go-api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: go-api
  name: go-api
  annotations:
    nginx.ingress.kubernetes.io/server-alias: "lzh.kyy.com,caishidian.kyy.com"
spec:
  rules:
    - host: 'www.kyy.com' # https 必须单独指明
      http:
        paths:
          - backend:
              serviceName: go-api
              servicePort: 9999
            path: /api/v1/
